--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
 	"require": {
 		"php": ">=5.6.3",
 		"sop/asn1": "^2.0.0",
-		"sop/crypto-types": "0.1.0",
-		"sop/crypto-bridge": "0.1.0"
+		"sop/crypto-types": "^0.1.0",
+		"sop/crypto-bridge": "^0.1.0"
 	},
 	"autoload": {
 		"psr-4": {
