--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,33 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/4.5/phpunit.xsd"
-	colors="true"
-	convertErrorsToExceptions="true"
-	convertNoticesToExceptions="true"
-	convertWarningsToExceptions="true"
-	bootstrap="test/bootstrap.php">
-	<testsuites>
-		<testsuite name="Unit">
-			<directory>test/unit</directory>
-		</testsuite>
-		<testsuite name="Integration">
-			<directory>test/integration</directory>
-		</testsuite>
-	</testsuites>
-	<filter>
-		<whitelist
-			addUncoveredFilesFromWhitelist="true"
-			processUncoveredFilesFromWhitelist="true">
-			<directory suffix=".php">lib</directory>
-		</whitelist>
-	</filter>
-	<logging>
-		<log
-			type="coverage-clover"
-			target="build/logs/clover.xml" />
-		<log
-			type="coverage-html"
-			target="build/coverage" />
-	</logging>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/8.1/phpunit.xsd" 
+    colors="true" 
+    convertErrorsToExceptions="true" 
+    convertNoticesToExceptions="true" 
+    convertWarningsToExceptions="true" 
+    bootstrap="test/bootstrap.php">
+    <testsuites>
+        <testsuite name="Unit">
+            <directory>test/unit</directory>
+        </testsuite>
+        <testsuite name="Integration">
+            <directory>test/integration</directory>
+        </testsuite>
+    </testsuites>
+    <filter>
+        <whitelist addUncoveredFilesFromWhitelist="true" 
+            processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">lib</directory>
+        </whitelist>
+    </filter>
+    <logging>
+        <log type="coverage-clover" 
+            target="build/logs/clover.xml" />
+        <log type="coverage-html" 
+            target="build/coverage" />
+    </logging>
 </phpunit>
