--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     "require": {
         "php": ">=7.2",
         "ext-hash": "*",
-        "sop/asn1": "dev-php72 as 3.4.0",
-        "sop/crypto-types": "dev-php72 as 0.2.1",
-        "sop/crypto-bridge": "dev-php72 as 0.2.0"
+        "sop/asn1": "dev-master as 3.4.0",
+        "sop/crypto-types": "dev-master as 0.2.1",
+        "sop/crypto-bridge": "dev-master as 0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.1"
